# chess-migrate

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  board.py  constants.py  pieces.py  types.py
game_ai/: __init__.py  bot.py  minimax.py  utils.py
game_ai/torch/: dataset.txt  model.py  predict.py  utils.py
logger/: __init__.py  logger.py
ui/: __init__.py  game.py  game.py.original
