[project]
name = "ChessAI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "loguru>=0.7.0",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "ipykernel>=7.1.0",
    "rich>=14.2.0",
    "lightning>=2.6.0",
    "chess>=1.11.2",
    "pydantic>=2.12.5",
    "git-filter-repo>=2.47.0",
]
